[project]
name = "torch-einops-utils"
version = "0.0.31"
description = "Personal utility functions"
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Phil Wang", email = "lucidrains@gmail.com" }]
keywords = ["einops", "torch"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["einops>=0.8.1", "torch>=2.5", "typing_extensions>=4.0.0"]

[project.urls]
Homepage = "https://pypi.org/project/torch-einops-utils/"
Repository = "https://github.com/lucidrains/torch-einops-utils"

[project.optional-dependencies]
examples = []
test = ["more_itertools", "numpy", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "torch_einops_utils",
  "tests",
  "LICENSE",
  "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["torch_einops_utils"]

[tool.isort]
add_imports = ["from __future__ import annotations"]
combine_as_imports = true
known_einops = ["einops", "torch_einops_utils"]
known_torch = ["torch", "torchvision", "torchaudio"]
multi_line_output = 3
sections = [
  "FUTURE",
  "STDLIB",
  "TORCH",
  "EINOPS",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
use_parentheses = true

[tool.pytest]
log_auto_indent = "On"
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",
  "COM812",
  "D",
  "E402",
  "E701",
  "E722",
  "E731",
  "E741",
  "FIX",
  "I",
  "N812",
  "PLR0913",
  "TC",
  "TD",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101",
  "FBT001",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
"accelerate.utils.dataclasses" = "accelerate_dataclasses"
"bidirectional_cross_attention.BidirectionalCrossAttentionTransformer" = "BiCrossAttnTransformer"
"einops.layers.torch.EinMix" = "Mix"
"hyper_connections.manifold_constrained_hyper_connections.get_expand_reduce_stream_functions" = "mc_get_expand_reduce_stream_functions"
"jax.numpy" = "jnp"
"kornia.augmentation" = "augs"
"torch.autograd.grad" = "torch_grad"
"torch.nn.functional" = "F"
"torch.nn.parallel.DistributedDataParallel" = "DDP"
"torchvision.transforms" = "T"

[tool.ruff.format]
docstring-code-format = true
