[project]
name = "torch-einops-utils"
version = "0.0.31"
description = "Personal utility functions"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license   = "MIT"
license-files = ["LICENSE"]
keywords = [
    'torch',
    'einops'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "torch>=2.5",
    "einops>=0.8.1",
    "typing_extensions>=4.0.0"
]

[project.urls]
Homepage = "https://pypi.org/project/torch-einops-utils/"
Repository = "https://github.com/lucidrains/torch-einops-utils"

[project.optional-dependencies]
examples = []
test = [
    "more_itertools",
    "numpy",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build]
include = [
  "torch_einops_utils",
  "tests",
  "LICENSE",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["torch_einops_utils"]
